--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/js-cookie": "^3.0.1",
     "axios": "^0.24.0",
     "element-plus": "^1.2.0-beta.3",
+    "flv.js": "^1.6.2",
     "js-cookie": "^3.0.1",
     "qrcode.vue": "^3.3.3",
     "svg-sprite-loader": "^6.0.11",
