--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/js-cookie": "^3.0.1",
     "axios": "^0.24.0",
+    "electron": "15.3.1",
     "element-plus": "^1.2.0-beta.3",
     "flv.js": "^1.6.2",
     "js-cookie": "^3.0.1",
@@ -26,7 +27,6 @@
     "@types/qs": "^6.9.7",
     "@vitejs/plugin-vue": "^1.9.3",
     "cross-env": "^7.0.3",
-    "electron": "^15.3.1",
     "node-sass": "^6.0.1",
     "nodemon": "^2.0.15",
     "sass": "^1.43.4",
