--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "electron": "15.3.1",
     "element-plus": "^1.2.0-beta.6",
     "flv.js": "^1.6.2",
+    "js-cookie": "^3.0.1",
     "qrcode.vue": "^3.3.3",
     "svg-sprite-loader": "^6.0.11",
     "vue": "^3.2.16",
